midpoint-live-demo/base/kubernetes-objects/mp/mp.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mp
  template:
    metadata:
      labels:
        app: mp
    spec:
      volumes:
        - name: shared-data-tomcat
          emptyDir: {}
        - name: nfs-volume
          emptyDir: {}
        - name: mp-home
          emptyDir: {}
        - name: mp-lib
          emptyDir: {}
        - name: mp-secret
          secret:
            secretName: mp-secret
            defaultMode: 420
        - name: pio
          projected:
            sources:
               - configMap:
                   name: users-map
               - configMap:
                   name: pio-map-1
               - configMap:
                   name: pio-map-2
               - configMap:
                   name: roles-map
        - name: login-page
          configMap:
            name: login-page-map
            defaultMode: 0777
        - name: import
          configMap:
            name: hr-map
            defaultMode: 420
        - name: tomcat-config
          configMap:
            name: tomcat-map
            defaultMode: 420
        - name: extension-schema
          configMap:
            name: extension-map
            defaultMode: 420
      containers:
        - name: tomcat
          image: 'tomcat:10-jdk11-corretto'
          ports:
            - name: tomcat-port
              containerPort: 8081
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: shared-data-tomcat
              mountPath: /usr/local/tomcat/webapps-javaee/
            - name: nfs-volume
              mountPath: /var/opt/
            - name: tomcat-config
              mountPath: /usr/local/tomcat/conf/server.xml
              subPath: server.xml
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
        - name: mp
          image: 'evolveum/midpoint:4.8-alpine'
          ports:
            - name: gui
              containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: mp-secret
              mountPath: /opt/midpoint/config-secrets
            - name: pio
              mountPath: /opt/midpoint-dirs-docker-entrypoint/post-initial-objects
            - name: import
              mountPath: /opt/midpoint-dirs-docker-entrypoint/import
            - name: extension-schema
              mountPath: /opt/midpoint-dirs-docker-entrypoint/schema
            - name: nfs-volume
              mountPath: /opt/midpoint/var/import/
            - name: mp-home
              mountPath: /opt/midpoint/var
            - name: mp-lib
              mountPath: /opt/midpoint/lib
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: mp-service
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
