midpoint-live-demo/base/kubernetes-objects/mp/mp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway    
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - midpoint.domain
      secretName: cert-mp-demo
  rules:
    - host: midpoint.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mp-service
                port:
                  number: 8080
